--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -10,7 +10,7 @@ html {
 
 body {
   background-color: #e4e3e3;
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: "Noto Sans TC", sans-serif;
   margin: 0px;
 }
 
@@ -81,11 +81,10 @@ main #hero-banner {
 }
 
 main #hero {
-  /* flexbox stuff*/
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('https://images.unsplash.com/photo-1471898554234-bcbfedd35134?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60')
+  background: url("https://images.unsplash.com/photo-1471898554234-bcbfedd35134?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60")
     no-repeat fixed center center / cover;
   width: 100vw;
   height: 100vh;
@@ -155,7 +154,7 @@ main #present {
 main #future {
   clear: both;
   /*will separate previous section that has 'float'*/
-  background: url('https://images.unsplash.com/photo-1485431618850-e6592fd4b298?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80')
+  background: url("https://images.unsplash.com/photo-1485431618850-e6592fd4b298?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80")
     no-repeat fixed center center/cover;
 }
 main #future a {
