--- a/7_task_3rd wk recap/style.css
+++ b/7_task_3rd wk recap/style.css
@@ -1,11 +1,14 @@
 /*global prperties go up, effect whole page*/
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
+
 body {
   font-family: "Raleway", sans-serif;
+  width: 100%
 }
 
 header {
@@ -19,9 +22,11 @@ header img {
 header nav ul li {
   display: inline-block;
 }
+
 header nav ul li a {
   text-decoration: none;
 }
+
 .container {
   margin: 50px;
 }
@@ -30,41 +35,80 @@ a:hover {
   background-color: teal;
 }
 
-main #hero {
+main #hero-banner {
   display: flex;
-  background: url("https://source.unsplash.com/3rfH2GOflo8/1200x800") no-repeat
-    fixed center center / cover;
+  background: url("https://source.unsplash.com/3rfH2GOflo8/1200x800") no-repeat fixed center center / cover;
+  height: 100%;
 }
 
-main #heroContent {
+main #hero-banner .content {
   width: 400px;
-  height: 220px;
-  margin: 250px auto;
-  padding: 10px;
-  float: left;
-  border-radius: 5px;
-  text-align: left;
+  height: 200px;
   background-color: tomato;
   color: white;
+  padding: 25px;
+  text-align: left;
 }
+
+main #hero-banner a {
+  text-decoration: none;
+  border: 1px solid black;
+  background-color: red;
+  color: white;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+main #hero-banner a:hover {
+  background-color: chocolate;
+}
+
 main #aboutUs {
-  height: 500px;
+  height: 100%;
+  display: inline-block;
 }
-main #aboutUsContent {
-  width: 500px;
-  height: 200px;
+
+main .texts {
+  width: 50%;
+  float: left;
 }
 
 main #aboutUs img {
-  width: 500px;
+  width: 50%;
   float: right;
 }
 
 footer {
   background-color: black;
+  color: white;
+  display: inline-block;
+}
+
+footer form {
+  float: left;
+  width: 50%;
+}
+
+footer h2 {
+  margin: 15px 0px;
+  font-size: 25px;
+}
+
+footer form .form-group label input {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 15px;
+}
+
+footer form label {
   text-align: left;
 }
 
-footer h3 {
-  color: white;
+footer form .firstName .lastName .email {
+  float: right
+}
+
+footer .footerText {
+  float: right;
+  width: 50%;
 }
