--- a/10_task flex, homework/style.css
+++ b/10_task flex, homework/style.css
@@ -13,6 +13,46 @@ header {
     padding: 1rem;
     display: flex; /*only need this and next line for headers flexing*/
     justify-content: space-between;
+  margin: 1px;
+}
+
+header #siteTitle {
+  background-color: yellow;
+  flex: 1;
+}
+
+header nav {
+  background-color: pink;
+  flex: 1;
+}
+
+header nav ul li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+/*Main section, all execpt header and footer*/
+main {
+  display: flex;
+  justify-content: space-between;
+}
+
+div {
+  margin: 1px;
+}
+
+#leftMain {
+  flex: 3;
+}
+
+#rightSideBar {
+  flex: 1;
+}
+
+#metaContentImg {
+  display: flex;
+  justify-content: space-between;
+}
   
 }
 
