--- a/grid-challenge/style.css
+++ b/grid-challenge/style.css
@@ -3,6 +3,13 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
+main {
+  display: grid;
+  grid-template-rows: 6;
+  grid-template-rows: 8;
+  grid-column-gap: 10px;
+}
 header {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -21,46 +28,49 @@ header nav ul {
 
 main section {
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+}
+
+main #titleMetaContentImg {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column: 1/4;
+  grid-row: 1/7;
+}
+
+main #metaContentImg {
+  display: grid;
+  grid-column: 1/4;
+  grid-row: 1/7;
 }
 
 main section #postTitle {
   background-color: lightblue;
+  grid-column: 1/4;
 }
 
 main section #postMeta {
   background-color: lightgreen;
+  grid-row: 2/7;
 }
 
 main section #content {
   background-color: lightgrey;
+  grid-row: 2/4;
+  grid-column: 2/4;
 }
 
 main section #contentImg {
   background-color: yellowgreen;
-}
-
-main section #titleMetaContentImg {
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-}
-
-main section #metaContentImg {
-  display: grid;
-  grid-template: 100% /40% 60%;
-}
-
-main section #contentImg {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-main section #sidebar {
-  display: grid;
-  grid-template-columns: repeat (3, 1fr);
+  grid-row: 4/7;
+  grid-column: 2/4;
 }
 
 main section #side {
+  grid-column: 4/5;
+  grid-row: 1/7;
   display: grid;
   grid-template-rows: repeat (3, 1fr);
 }
