--- a/grid-challenge/style.css
+++ b/grid-challenge/style.css
@@ -3,85 +3,99 @@
   padding: 0px;
   box-sizing: border-box;
 }
-
-main {
-  display: grid;
-  grid-template-rows: 6;
-  grid-template-rows: 8;
-  grid-column-gap: 10px;
+body {
+  background-color: #333;
 }
+#gridContainer {
+  background-color: white;
+  padding: 5px;
+  width: 500px;
+}
+
 header {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  height: 50px;
+  grid-template-columns: repeat (6, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
 }
-
-header #siteTitle {
+#siteTitle {
+  grid-column: 1/4;
   background-color: yellow;
 }
 
-header nav ul {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  background-color: pink;
-  list-style-type: none;
-}
-
-main section {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-}
-
-main #titleMetaContentImg {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-  grid-column: 1/4;
-  grid-row: 1/7;
-}
-
-main #metaContentImg {
-  display: grid;
-  grid-column: 1/4;
-  grid-row: 1/7;
-}
-
-main section #postTitle {
-  background-color: lightblue;
-  grid-column: 1/4;
-}
-
-main section #postMeta {
-  background-color: lightgreen;
-  grid-row: 2/7;
-}
-
-main section #content {
-  background-color: lightgrey;
-  grid-row: 2/4;
-  grid-column: 2/4;
-}
-
-main section #contentImg {
-  background-color: yellowgreen;
-  grid-row: 4/7;
-  grid-column: 2/4;
-}
-
-main section #side {
+#nav1 {
   grid-column: 4/5;
-  grid-row: 1/7;
-  display: grid;
-  grid-template-rows: repeat (3, 1fr);
+  background-color: pink;
 }
-main section #sideBar {
+
+#nav2 {
+  grid-column: 5/6;
+  background-color: pink;
+}
+
+#nav3 {
+  grid-column: 6/7;
+  background-color: pink;
+}
+
+main {
+  display: grid;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  margin-top: 5px;
+  grid-template-columns: repeat (5, 1fr);
+  grid-template-rows: repeat (7, 1fr);
+}
+
+#postTitle {
+  grid-column: 1/4;
+  grid-row: 1/2;
+  background-color: lightblue;
+  height: 50px;
+}
+
+#postMeta {
+  grid-column: 1/2;
+  grid-row: 2/7;
+  background-color: lightgreen;
+}
+
+#content {
+  grid-column: 2/4;
+  grid-row: 2/4;
+  background-color: lightgrey;
+  height: 100px;
+}
+
+#contentImg {
+  grid-column: 2/4;
+  grid-row: 4/7;
+  background-color: yellow;
+  height: 150px;
+}
+
+#sideBar {
+  grid-column: 4/5;
+  grid-row: 1/3;
   background-color: orange;
 }
 
-main section #ads {
+#ads {
+  grid-column: 4/5;
+  grid-row: 3/5;
   background-color: green;
 }
 
-main section #otherStuffs {
+#otherStuffs {
+  grid-column: 4/5;
+  grid-row: 5/7;
   background-color: violet;
+}
+
+#footer {
+  grid-column: 1/5;
+  grid-row: 7/8;
+  background-color: grey;
+  height: 50px;
 }
