--- a/16_task_transformation_animation/style.css
+++ b/16_task_transformation_animation/style.css
@@ -14,10 +14,10 @@
 body {
   /*gradient with background-image!*/
   font-family: var(--font);
-  height: 100%;
+  height: 100vh;
   background-image: linear-gradient(white, #333);
   background-image: linear-gradient(to right bottom, white, #333);
-  background-image: linear-gradient(-90deg, white, #333, black);
+  background-image: linear-gradient(white, #333, black);
 }
 
 .card {
