--- a/16_task_transformation_animation/style.css
+++ b/16_task_transformation_animation/style.css
@@ -104,37 +104,32 @@ body {
   }
 }
 
-.menuItem h1 {
+/*Menu item*/ /*NB! in styleMargit, effect for element coming from top to bottom on left*/
+
+.menu-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu-item h1 {
   display: inline-block;
+  position: relative;
+  padding: 10px;
+  color: aliceblue;
 }
 
-.menuItem h1::before {
-  /*::before-->  before h1 element, ie. as "on top"*/
-}
-
-.menuItem h1::after {
+.menu-item h1::after {
   content: "";
   /* height: 4px; with this, bottom line will be visible at start*/
   width: 0;
-  display: inherit;
+  display: block;
+  position: absolute;
   background-color: lightcoral;
   transition: all 1s ease-in;
 }
 
-.menuItem:hover h1::after {
+.menu-item:hover h1::after {
   /*::after --> after h1 element, ie. as "underline"*/
-  content: "";
   height: 4px;
   width: 100%;
-  display: inherit;
-  background-color: lightcoral;
-}
-
-.menuItem:hover h1::after {
-  /*::after --> after h1 element, ie. as "underline"*/
-  content: "";
-  height: 4px;
-  width: 100%;
-  display: inherit;
-  background-color: lightcoral;
 }
