17_task borders added

--- a/17_task_animations challenge/style.css
+++ b/17_task_animations challenge/style.css
@@ -32,8 +32,8 @@ div {
 }
 
 .first-task {
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
   border-radius: 50%;
   background-color: rgb(34, 145, 145);
   transition: all 2s;
@@ -76,25 +76,89 @@ div {
   width: 100px;
   visibility: visible;
 }
-
+/* ----------------- 5th task ---------------------*/
 .fifth-task {
-  height: 150px;
-  width: 150px;
-  border-radius: 5%;
-  background-color: rgb(84, 145, 34);
-  border: 10px solid transparent;
-  z-index: 0;
+  height: 200px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  transition: 3s;
 }
 
-.fifth-task:hover {
-  border: 10px solid rgb(31, 54, 12);
-  position: absolute;
-  z-index: -1;
+/* with one div you can do one ::before, one ::after, ie. eg top and bottom borders. One element can have only one ::Before and one ::after! 
+Here h3 inside div can be used to make two other box borders, one ::after, one ::before*/
+
+/*  TOP side  */
+.fifth-task::before {
   content: "";
+  /* content has to always be there for pseudo-elements! Otherwise it does not exist as it is not in HTML*/
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 200px;
+  border-top: 3px solid rgb(16, 143, 84);
+  transition: all 1s;
 }
 
+.fifth-task:hover::before {
+  right: 0;
+}
+
+/*  RIGHT side  */
+.fifth-task::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 200px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-right: 3px solid rgb(17, 131, 121);
+  transition: all 1s;
+}
+
+.fifth-task:hover::after {
+  top: 0;
+}
+
+/*  BOTTOM side  */
+.fifth-task h3::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 200px;
+  right: 0;
+  border-bottom: 3px solid rgb(86, 165, 62);
+  transition: all 1s;
+}
+
+.fifth-task:hover h3::before {
+  left: 0;
+}
+
+/*  LEFT side  */
+.fifth-task h3::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 200px;
+  left: 0;
+  right: 0;
+  border-left: 3px solid rgb(12, 110, 56);
+  transition: all 1s;
+}
+
+.fifth-task:hover h3::after {
+  bottom: 0;
+}
+
+/* -------------------- 6th task ---------------------*/
 .animated-circle {
   height: 150px;
   width: 150px;
